# pearls

./: .gitignore  Cargo.toml  README.md
dial/: Cargo.toml
dial/src/: bot.rs  http.rs  main.rs  notif.rs
dial/src/make/: avail.rs  cal.css  cal.rs  common.rs  complete.rs  deadline.rs  digest.rs  done.rs  help.rs  intent.rs  list.rs  meta.rs  mod.rs  more.rs  new.rs  note.rs  parent.rs  parse_error.rs  project.rs  provision.rs  since.rs  start.rs  stop.rs  switch.rs
dial/src/notif/: end_of_task.rs  mod.rs
html/: Cargo.toml
html/src/: lib.rs
http/: Cargo.toml
http/src/: cal.css  calendar.rs  common.rs  context.rs  helpers.rs  landing.css  landing.rs  lib.rs  tabular.rs  timeline.css  timeline.rs  timeline2.rs  workload.css  workload.rs
http/src/statics/: landing.css  timeline.css  timeline.less
http/src/templates/: landing.html  timeline.html
matrix_bot_api/: Cargo.toml
matrix_bot_api/src/: handlers.rs  lib.rs
matrix_bot_api/src/handlers/: stateless_handler.rs
shell/: Cargo.toml
shell/src/: cal.rs  expr.rs  lib.rs  parser_ext.rs  plan.rs  store.rs  util.rs
shell/src/sql/: create_cal.sql  create_do.sql  create_notification.sql  create_project.sql  insert_avail.sql  insert_cal.sql  insert_do.sql  insert_intent.sql  insert_note.sql  insert_notification.sql  insert_project.sql  select_all_project_info.sql  select_avail.sql  select_avail_for_user.sql  select_cal.sql  select_current_task.sql  select_current_task_for.sql  select_ending_task.sql  select_intent_all.sql  select_intent_for_project.sql  select_intent_for_user.sql  select_latest_task_for.sql  select_notes.sql  select_project.sql  select_project_detail.sql  select_project_info.sql  select_user.sql  update_completed.sql  update_deadline.sql  update_meta.sql  update_parent.sql  update_provision.sql  update_task_end.sql
shell/src/sql/migrations/: 001.sql  002.sql  003.sql  004.sql  005.sql  006.sql
template/: timeline.html
