[package]
name = "http"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"


[dependencies]
shell = { path = "../shell" }
html = { path = "../html" }
warp = "0.2.5"
tokio =  { version = "0.2", features = ["full"] }
chrono = "0.4.9"
csv = "1.3.0"
bytes = "1.1.0"
handlebars = {version = "4.4.0", features = ["dir_source"] }
serde = "1.0.190"
serde_json = "1.0.108"
