[package]
name = "shell"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-humanize = "0.0.11"
pom = "3.0.2"
humantime = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.20.0"