[package]
name = "shell"
version = "0.1.0"
authors = ["Pierre Marchand <pierre-m@atelier-cartographique.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-humanize = "0.1.1"
pom = "3.0.2"
humantime = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.24.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
html = {path = "../html"}